@@ -82,6 +82,7 @@ export(msaplot)
 export(multiplot)
 export(nodebar)
 export(nodepie)
+export(open_tree)
 export(phyPML)
 export(phylopic)
 export(plot)
@@ -102,6 +103,7 @@ export(read.tree)
 export(reroot)
 export(rescale_tree)
 export(rotate)
+export(rotate_tree)
 export(rtree)
 export(scaleClade)
 export(scale_color)
